welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:2: error: value and is not a member of Boolean
  if ((temp1<0 and temp2>100)|| (temp2<0 and temp1>100)){
               ^icyHot:2: error: value and is not a member of Boolean
  if ((temp1<0 and temp2>100)|| (temp2<0 and temp1>100)){
                                         ^