welcome.lessons.welcome.bat.bool1.IcyHot.scala.code
def icyHot(temp1:Int, temp2:Int):Boolean = {
  if ((temp1<0 and temp2>100)|| (temp2<0 and temp1>100)){
    return true
  }else{
    return false
  }
}